[gd_scene load_steps=2 format=3 uid="uid://cdq6pkxuqct0u"]

[ext_resource type="Script" path="res://Prog152a.gd" id="1_rgnei"]

[node name="Prog152a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rgnei")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 488.0

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 548.0
offset_right = 177.0
offset_bottom = 649.0
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 452.0
offset_top = 543.0
offset_right = 628.0
offset_bottom = 644.0
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 973.0
offset_top = 546.0
offset_right = 1149.0
offset_bottom = 647.0
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
